<resources>
    <string name="app_name">Akatsuki</string>
    <string name="itachi">Itachi Uchiha</string>
    <string name="obito">Obito Uchiha</string>
    <string name="yahiko">Yahiko</string>
    <string name="deidara">Deidara</string>
    <string name="sasori">Sasori</string>
    <string name="nagato">Nagato</string>
    <string name="konan">Konan</string>
    <string name="hidan">Hidan</string>
    <string name="kisame">Kisame Hoshigaki</string>
    <string name="kakuzu">Kakuzu</string>
    <string name="zetsu">Zetsu</string>
    <string name="desarrollador">Acerca De</string>
    <string name="principal">AKATSUKI</string>
    <string name="imagen">pain</string>
    <string name="uchiha">ita</string>
    <string name="obiuchi">mascara</string>
    <string name="descri_text">Obito Uchiha (うちはオビト, Uchiha Obito) era compañero de Kakashi Hatake y Rin Nohara y alumno de Minato Namikaze y fue quien le dio a Kakashi su Sharingan izquierdo. Luego de su "muerte" reapareció como Tobi (トビ, Tobi). Él es el verdadero líder de Akatsuki. Es uno de los antagonistas principales de la serie. Él mismo se auto-proclamó como Madara Uchiha (aunque no lo fuera). Después de conseguir el Rinnegan, su vestuario cambió a una nueva máscara que deja al descubierto los dos ojos, a diferencia de su antigua máscara que sólo mostraba uno, ésta era de un color blanco y tenía la parte trasera cubierta de una tela color púrpura claro, ésta tenía un diseño de tres tomoe con un pequeño punto en el centro y un patrón de ondas extendiéndose a través de ella, haciendo alusión al Sharingan y Rinnegan. Está máscara era de un material muy resistente, que, según él, era más adecuado para la guerra, llegando incluso a soportar un choque a toda velocidad con Naruto en su Modo Chakra del Nueve Colas sin siquiera sufrir una rasguño. Acompañaba esta máscara con una ropa traje similar al atuendo tradicional del Clan Uchiha durante el Era de Guerra entre Clanes. Este traje incluía un par de pantalones y guantes de color negro con una camisa negra de mangas blancas, sobre ésta llevaba una gran túnica púrpura de cuello alto y manga larga y tenía grabado el símbolo Uchiha en la espalda. Alrededor de su cintura, llevaba una sencilla obi morado y un cinturón. Portaba consigo el Gunbai de Madara en la espalda.

Obito después de convertirse en el Jinchūriki del Diez Colas, sufre una serie de cambios en su cuerpo: Su cabello se vuelve color blanco, le aparecen diez salientes en su espalda, cinco en la parte superior de su espalda y otros cinco cerca de su cadera, así como una serie de magatamas, siendo nueve pequeñas y una grande con la forma del Rinnegan, pero con dos líneas a los lados. Además, la parte derecha de su cuerpo parece estar cubierta por la piel de la bestia. Ahora sólo lleva el pantalón del traje que llevaba al inicio de la Guerra. </string>
    <string name="titere">saso</string>
    <string name="sa_txt">Sasori (サソリ, Sasori), también conocido como Sasori de la Arena Roja (赤 砂 の サソリ, Akasuna no Sasori), era el nieto de Chiyo y miembro de Akatsuki. Llevaba el anillo "Joya" (玉, Gyoku) en el pulgar izquierdo. Tenía como compañero a Deidara y antes a Orochimaru (hasta que este desertó). Sasori y su segundo socio en Akatsuki, Deidara, tenían opiniones contrarias sobre el arte, y frecuentemente discutían sobre sus puntos de vista. Deidara mantenía la opinión de que el arte era algo transitorio que se aparta rápidamente, en tanto que Sasori creía que las obras de arte son algo maravilloso y que duran para siempre. Esto refleja sus naturalezas individuales: Deidara realizaba esculturas de arcilla que explotan, mientras que Sasori creaba marionetas de larga duración de los seres humanos. Sin embargo, Deidara exteriormente parecía respetar las creencias de Sasori, aunque Sasori nunca ha respetado las de Deidara, aún así, Sasori siempre le respetaba como compañero y le trataba como su alumno a quien tenía que enseñar. Ellos, al parecer, tenían una buena relación de compañeros. También parecía llevarse bien con Kakuzu, ya que a la hora de repartirse las misiones de Akatsuki, se ponían rápidamente de acuerdo el uno con el otro sin tener que discutir.
Después de aceptar el punto de vista de Kankurō sobre el arte eterno, él confió a su Madre y Padre a Kankurō y le dijo que los pasara a la siguiente generación después de que él muriera.</string>
    <string name="gedomazo">gedo</string>
    <string name="na_txt">Nagato (長門, Nagato), mejor conocido como Pain (ペイン, Pein), era uno de los más poderosos shinobi, y el líder reconocido de Akatsuki y de Amegakure. Todos los miembros de Akatsuki se referían a él como “Líder”, excepto Konan quien lo llamaba por su nombre, Pain. Llevaba el anillo Cero (零, Rei) en el dedo pulgar derecho. También era usuario del dōjutsu legendario, el Rinnegan, quien fue dado por Madara Uchiha antes de su muerte e implantado en Nagato cuando sólo era un niño. En su estadía en la organización trabajaba con Konan y recibía órdenes de Obito desde las sombras. En el anime, Nagato se mostró sensible a la hora de hablar del dolor, cuando Ibiki Morino utilizó su jutsu especial de invocación “aquellos que están enlazados por el dolor”, Nagato se enfureció (a través del Camino Animal) y le gritó “tú no tienes ni idea de lo que es el verdadero dolor” deshaciendo del jutsu y atacando violentamente a Ibiki. No obstante, se le veía ser muy respetuoso con los fallecidos en batalla y a los muertos. Habiendo frecuentes disputas entre los miembros de Akatsuki, él a menudo las contuvo, y alentó a mejorar las relaciones entre los miembros. Incluso sugirió llorarle a Deidara después de su muerte, y reprendió a Kisame Hoshigaki por llamar a Hidan y Kakuzu “el equipo zombi”. Después de la batalla contra Jiraiya, guardó un minuto de silencio por su antiguo maestro, por respeto a su poder.</string>
    <string name="papel">konapa</string>
    <string name="papel_txt">Konan (小南, Konan) era una kunoichi de Amegakure y único miembro femenino de Akatsuki. Llevaba el anillo "Blanco" (白, Bya) en el dedo corazón derecho. Después de la muerte de Nagato, ella desertó de la organización y se convirtió en la líder de Amegakure, poseía un talento natural para el origami. Konan es una mujer muy atractiva que tenía un cabello corto lacio de color azul, unos ojos ámbar (en el manga, grises), unas sombras alrededor de sus ojos de color azul-púrpura y un piercing debajo del labio inferior. Desde su infancia, lleva en su cabello una flor color azul hecha de papel. Cuando se unió a Akatsuki, empezó a llevar su ropa y llevó un anillo con el kanji que significaba "Tigre Blanco" en el dedo medio derecho y utilizaba un esmalte de color naranja en sus manos y pies.

Desde que era niña, se ha visto que ha utilizado una gran cantidad de atuendos, mientras entrenaba con Jiraiya, llevaba un kimono de karate con una falda debajo. Cuando formó parte de una banda de shinobi, utilizaba un manto de color negro junto con una cinta.</string>
    <string name="ki_txt">Kisame Hoshigaki (干柿鬼鮫 Hoshigaki Kisame), conocido como el Monstruo de la Niebla Oculta (霧隠れの怪人, Kirigakure no Kaijin), era un ninja renegado de Kirigakure, ex miembro de los Siete Espadachines Ninja de la Niebla y anteriormente compañero de Itachi Uchiha en Akatsuki. Llevaba el anillo Sur (南, Nan), en el dedo anular izquierdo Antes de ser conocido como un miembro de los Siete Espadachines Ninja de la Niebla, Kisame fue designado como guardaespaldas de la brigada de inteligencia de Kirigakure, siendo el subordinado del anterior espadachín. Atrapados por el pelotón de Ibiki Morino, durante una misión, optó por matar a sus compañeros de equipo con el fin de prevenir que cualquier información se filtrara. Más tarde, mató a su maestro cuando se dio cuenta de que estaba vendiendo la información, así toma el control de Samehada para él y también lo sustituye como uno de los siete espadachines. El Cuarto Mizukage, Yagura, lo felicitó por su acto de lealtad a Kirigakure, Kisame le reprendió y reveló su desilusión. Dijo que ya no sabía cuál era su función dentro de la villa, que era leal al pueblo pero se veía forzado a matar a sus compañeros, Tobi, se reveló controlando a Yagura desde la sombra, dando a entender a Kisame su Plan Ojo de Luna. </string>
    <string name="ka_txt">Kakuzu (角都, Kakuzu) fue un ninja renegado de Takigakure y miembro de Akatsuki. Su compañero fue Hidan. Llevaba el anillo "Norte" (北, Hoku) en el dedo medio izquierdo. A pesar de la mutua antipatía entre ambos, su trabajo en equipo fue casi perfecto, porque se complementaban mutuamente. Kisame Hoshigaki se refiere a Hidan y Kakuzu como el "Combo Zombie" (ゾンビコンビ, Zonbi Konbi), ya que prácticamente no podían morir. Kakuzu fue una persona codiciosa, avara, no se involucraba en nada a menudo, a menos que ganara algo. Incluso comentó que el dinero es lo único fiable en el mundo. Debido a ello, se refirió a sí mismo como el “tesorero de Akatsuki”. Dada su relación de amistad con Ginji, su encargado de la generosidad, al parecer, recogió recompensas con bastante frecuencia para ganar dinero y lo hizo (o, al menos, intentado) durante sus misiones en varias ocasiones. La frecuencia de dejar a lado las misiones y la devoción al dinero fueron los puntos importantes de la discordia entre Hidan y Kakuzu. También parecía respetar a sus adversarios, cuando muestra su reacción a Kakashi Hatake por haber averiguado su técnica, y un análisis rápido de Shikamaru Nara por la maldición de Hidan, incluso dice que Shikamaru habría sido una buena recompensa en el futuro, pero lamentablemente iba a morir ese día.</string>
    <string name="ze_txt">Zetsu Negro (黒ゼツ, Kuro-Zetsu) es la manifestación de la voluntad de Kaguya Ōtsutsuki, aunque este fingió ser la voluntad de Madara Uchiha. Fue la mente maestra tras varios acontecimientos importantes que dieron lugar y formaron la historia de los Shinobis. Tras ayudar a Obito Uchiha en su reunión con Nagato, Zetsu se convirtió en uno de los miembros más importantes de Akatsuki, sirviendo como mano derecha del creador de la organización. Zetsu porta el anillo con el kanji 亥(Gai, literalmente "jabalí"), en el dedo meñique derecho. Zetsu Negro es conocido también como Dokuzetsu (毒舌, literalmente, significa Lengua Perversa). Además, fue el segundo Jinchūriki de la mitad Yin de Kurama al robarla. Posteriormente, durante la Tercera Guerra Mundial Shinobi cuando Madara encontró a un sucesor, Obito Uchiha, Madara "creó" a Zetsu Negro vertiendo su voluntad en Zetsu Blanco para que ayudará al joven Uchiha en su misión. Fue Madara quien se conectó a la estatua para mantenerse con vida. Se desconecto de ella y finalmente murió. Zetsu, más tarde, acompañó a Obito a Amegakure para localizar a Nagato confirmándole al Uchiha que el Rinnegan que poseía eran en verdad los ojos de Madara que sin saberlo se los implantó cuando sólo era un niño. Además vio cómo Obito se presentó ante ellos como Madara Uchiha. Los años pasaron y ambos siguieron con sus planes entrando en Akatsuki y capturando a las Bestias con Cola.</string>
    <string name="anterior">Menu Principal</string>
    <string name="programador">Desarrollado Por:</string>
    <string name="nombre">Vazquez Diego Adrian</string>
    <string name="grado">Grupo 7T11</string>
    <string name="elmeromero">El Patron</string>
</resources>