<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:context=".KONANActivity">

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="wrap_content"
        android:layout_height="230dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/papel"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/kona" />

    <ScrollView
        android:id="@+id/scrollView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView8">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView12"
            android:layout_width="115dp"
            android:layout_height="54dp"
            android:layout_gravity="center"
            android:text="@string/konan"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="389dp"
            android:layout_height="549dp"
            android:text="@string/papel_txt"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/button7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorboton"
            android:onClick="anterior"
            android:text="@string/anterior" />
    </LinearLayout>
    </ScrollView>
</RelativeLayout>