<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:context=".ZETSUActivity">

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="wrap_content"
        android:layout_height="230dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/obiuchi"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/zetsu" />

    <ScrollView
        android:id="@+id/scrollView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView12">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView22"
            android:layout_width="122dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:text="@string/zetsu"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView23"
            android:layout_width="391dp"
            android:layout_height="727dp"
            android:layout_marginTop="15dp"
            android:text="@string/ze_txt"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorboton"
            android:onClick="anterior"
            android:text="@string/anterior" />
    </LinearLayout>
    </ScrollView>
</RelativeLayout>