<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:context=".KISAMEActivity">


    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="wrap_content"
        android:layout_height="230dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/obiuchi"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/kisa" />

    <ScrollView
        android:id="@+id/scrollView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView10">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView14"
            android:layout_width="262dp"
            android:layout_height="49dp"
            android:layout_gravity="center"
            android:text="@string/kisame"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="650dp"
            android:layout_marginTop="15dp"
            android:text="@string/ki_txt"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/button6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorboton"
            android:onClick="anterior"
            android:text="@string/anterior" />
    </LinearLayout>
    </ScrollView>
</RelativeLayout>